samples/_failures_safe/1761598908_69491b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_10c17f17.c: In function ‘main’:
./samples/SAFE/__tmp_10c17f17.c:135:30: error: missing terminating " character
  135 |     add_log_entry(&analyzer, "2024-01-15 10
      |                              ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_10c17f17.c:135:5: error: expected expression at end of input
  135 |     add_log_entry(&analyzer, "2024-01-15 10
      |     ^~~~~~~~~~~~~
./samples/SAFE/__tmp_10c17f17.c:135:5: error: too few arguments to function ‘add_log_entry’
./samples/SAFE/__tmp_10c17f17.c:50:5: note: declared here
   50 | int add_log_entry(struct LogAnalyzer *analyzer, const char *timestamp, const char *level, const char *message) {
      |     ^~~~~~~~~~~~~
./samples/SAFE/__tmp_10c17f17.c:135:5: error: expected declaration or statement at end of input
  135 |     add_log_entry(&analyzer, "2024-01-15 10
      |     ^~~~~~~~~~~~~
